<resources>
    <string name="app_name">Baims</string>
    <string name="my_page_title">صفحتي</string>
    <string name="invalid_mobile_number">جوال غير صحيح</string>
    <string name="required">مطلوب</string>
    <string name="email">الإيميل</string>
    <string name="invalidEmailAddress">بريد غير صحيح</string>
    <string name="require_field">مطلوب</string>
    <string name="NewPasswordLessThan4">" طول الحقل يجب أن يكون أكثر من 4"</string>
    <string name="create_account">انشاء حساب جديد</string>
    <string name="courses">دورات</string>
    <string name="courses_number">%1$d دورات</string>
    <string name="not_subscribed_yet">لم تشترك بأي دورات بعد</string>
    <string name="secondary_courses">دورات الثانوي</string>
    <string name="videos">%1$d فيدوهات</string>
    <string name="currency">%1$s دينار</string>
    <string name="questions">الأسئلة</string>
    <string name="details">التفاصيل</string>
    <string name="subscribe">اشترك</string>
    <string name="description">الوصف</string>
    <string name="file">%1$d ملف</string>
    <string name="time">%1$d ساعة</string>
    <string name="video">فيديو %1$d </string>
    <string name="enter_cobon_code">ادخل كود الكوبون</string>
    <string name="free">مجانا</string>
    <string name="course_intro">مقدمة الدورة</string>
    <string name="premium">Premium</string>
    <string name="invoice">----- فاتورة الدورة -----</string>
    <string name="subscribed">تم الاشتراك</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="do_you_have_a_cobone">هل لديك كوبون؟</string>
    <string name="use_promocode">تفعيل الكوبون</string>
    <string name="subscribe_now">اشترك الان</string>
    <string name="invalid_cobone">الكوبون غير صحيح</string>
    <string name="payment_loading">جاري تحويلك لعملية الدفع</string>
    <string name="discount_amount">- %1$d % خصم</string>
    <string name="discount">خصم</string>
    <string name="add_first_question">اضف السؤال الأول</string>
    <string name="add_question">اضافة سؤال</string>
    <string name="send">ارسال</string>
    <string name="show_identity">إظهار هويتك</string>
    <string name="please_enter_display_name">من فضلك ادخل الإسم المستعار</string>
    <string name="comment_added">تم اضافة التعليق</string>
    <string name="your_courses">الدورات المشترك بها</string>
    <string name="search_results">نتائج البحث</string>
    <string name="search">ابحث</string>
    <string name="no_results">لا يوجد نتائج</string>
    <string name="confirm_subscribe">تأكيد الإشتراك</string>
    <string name="no_questions">لا يوجد اسئلة</string>
    <string name="no_courses_in_this_section">لا يوجد دورات بهذا القسم</string>
    <string name="try_again">برجاء المحاولة مرة اخرى</string>

</resources>
