<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="@dimen/_16sdp"
    android:background="@android:color/white"
    android:foreground="?android:attr/selectableItemBackground"
    android:layoutDirection="rtl"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    tools:context=".presentation.question.AddQuestionActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/bg_curved_white"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_close2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center"
            android:text="@string/add_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            android:text="@string/send"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_title_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/separatorLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_close" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchIdentity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:checked="true"
            android:text="@string/show_identity"
            android:textDirection="rtl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_title_separator" />

        <EditText
            android:id="@+id/edt_display_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="top"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="ادخل الإسم المستعار"
            android:visibility="gone"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchIdentity" />

        <EditText
            android:id="@+id/edt_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="top"
            android:hint="اكتب سؤالك هنا"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_display_name" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/edt_question" />


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_question" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:hint="كلمة المرور"
            android:inputType="textPassword"
            android:maxLines="1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <ImageView
            android:id="@+id/iv_browse"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_browse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_question"/>


        <ImageView
            android:id="@+id/iv_record"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_play"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_record"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<MediaController-->
            <!--android:id="@+id/media_controller"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:visibility="gone"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/edt_question"/>-->


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>


